--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "gh-pages": "^5.0.0",
     "joi": "^17.7.0",
     "jwt-decode": "^3.1.2",
     "material-ui-pagination": "^1.1.6",
